<resources>
    <string name="app_name">FoodOrdering</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_to_restaurant_version">Welcome to Restaurant Version</string>
    <string name="registration">Registration</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="new_here_register_here">New here? Register Here</string>
    <string name="see_menu" />
    <string name="add_items">add items</string>
    <string name="welcome_to_menu_settings">Welcome To Menu Settings</string>
    <string name="add_item">add item</string>
    <string name="description">descrition</string>
    <string name="Category">Category</string>
    <string name="price">price</string>
    <string name="add">add</string>
    <string name="cuisine">edit details</string>
    <string name="edit_details">edit detalis</string>
    <string name="status">status</string>
    <string name="update">update</string>
    <string name="menu_settings" />
    <string name="logout">logout</string>
</resources>
